# Steam_Cloudcheck

./: .gitignore  Makefile  README.md  SteamCloudCheck.spec  SteamLibraryParser.ipynb  main.py  pyproject.toml  requirements.txt  steamFileParser.py  steam_app_api.py
pytests/: test_api.py
