[project]
name = "steam-cloudcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "inquirerpy>=0.3.4",
    "pandas>=2.2.3",
    "pyinstaller>=6.12.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
